# dono

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  dono.toml  flake.nix  test
.github/: README.md
.github/workflows/: rust.yml
src/: color.rs  config.rs  dono.rs  lib.rs  main.rs
src/graphql/: query.gql  schema.gql
src/utils/: color.rs  mod.rs
