[package]
name = "dono"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jere Vuola <vuolajere@gmail.com"]

[dependencies]
anyhow = "1.0"
reqwest = { version = "^0.11.12", features = ["json", "blocking"] }
serde = { version = "^1.0.130", features = ["derive"] }
clap = { version = "^4.0", features = ["derive"] }
graphql_client = { version = "0.11.0", features = ["reqwest-blocking"] }
ansi_term = "0.12.1"
toml = "0.5.10"
dirs = "4"
chrono = "0.4.23"
